initial commit for llm hackathon branch

--- a/database_checker.ipynb
+++ b/database_checker.ipynb
@@ -2,27 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id conversation_id            timestamp  \\\n",
-      "0   1               1  2023-09-18 17:00:20   \n",
-      "1   2               1  2023-09-18 17:00:53   \n",
-      "2   3               3  2023-09-18 17:00:56   \n",
-      "3   4               3  2023-09-18 17:00:56   \n",
-      "4   5               5  2023-09-18 17:00:57   \n",
-      "\n",
-      "                                             content             type  \n",
-      "0  I want to learn about dinosaurs, but I don't k...     conversation  \n",
-      "1  {\"Overview\": \"Dinosaurs, the 'terrible lizards...  ui_instructions  \n",
-      "2  I want to learn about dinosaurs, but I don't k...     conversation  \n",
-      "3  {\"Overview\": \"Dinosaurs, the 'terrible lizards...  ui_instructions  \n",
-      "4  I want to learn about dinosaurs, but I don't k...     conversation  \n"
+      "Empty DataFrame\n",
+      "Columns: [id, conversation_id, timestamp, content, type]\n",
+      "Index: []\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>conversation_id</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>content</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [id, conversation_id, timestamp, content, type]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -45,9 +78,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>conversation_id</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>content</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [id, conversation_id, timestamp, content, type]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
