update mongodb access module for additional flexiblity.

--- a/mongo_test.ipynb
+++ b/mongo_test.ipynb
@@ -2,77 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mongodb_converastion_logging import initialize_conversation, update_conversation, check_conversation\n",
-    "conversation_id = initialize_conversation()"
+    "from mongodb_converastion_logging import connect_mongodb_collection, initialize_conversation, update_conversation, check_conversation\n",
+    "conversation_id = initialize_conversation(model_name = \"test\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "query = \"abc\"\n",
-    "response = \"def\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "response = \"def\"\n",
     "update_conversation(conversation_id, query, response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"abc\"\n",
-    "response = \"def\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "update_conversation(conversation_id, query, response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conversation ID: cee6f613-1200-4daa-ae0e-f63dbecd893e\n",
+      "Conversation ID: 6514002ae519dbedfd3c30df\n",
+      "Model Used: test\n",
       "==================================================\n",
       "Interaction #1\n",
       "User: abc\n",
       "Chatbot: def\n",
-      "Timestamp: 2023-09-25T19:03:11.763163\n",
+      "Timestamp: 2023-09-27T12:12:59.553925\n",
       "--------------------------------------------------\n",
       "Interaction #2\n",
       "User: abc\n",
       "Chatbot: def\n",
-      "Timestamp: 2023-09-25T19:03:13.088224\n",
+      "Timestamp: 2023-09-27T12:13:00.447126\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
+    "query = \"abc\"\n",
+    "response = \"def\"\n",
+    "update_conversation(conversation_id, query, response)\n",
     "check_conversation(conversation_id)"
    ]
   }
