add pitchdecks and update split model content

--- a/src/split_model_expirament.ipynb
+++ b/src/split_model_expirament.ipynb
@@ -14,13 +14,13 @@
     "\n",
     "# Select Model\n",
     "\n",
-    "content_model_name = 'gpt-3.5-turbo'\n",
+    "#content_model_name = 'gpt-3.5-turbo'\n",
     "#content_model_name = 'gpt-3.5-turbo-16k'\n",
-    "#content_model_name = 'gpt-4'\n",
+    "content_model_name = 'gpt-4'\n",
     "\n",
-    "code_model_name = 'gpt-3.5-turbo'\n",
+    "#code_model_name = 'gpt-3.5-turbo'\n",
     "#code_model_name = 'gpt-3.5-turbo-16k'\n",
-    "#code_model_name = 'gpt-4'\n",
+    "code_model_name = 'gpt-4'\n",
     "\n",
     "# Set model temperature\n",
     "content_model_temperature = 0.0\n",
@@ -32,7 +32,7 @@
     "        self.temperature = temperature\n",
     "        self.api_key = api_key\n",
     "        self.prompt = None\n",
-    "        self.response = None\n",
+    "        self.resp onse = None\n",
     "        \n",
     "\n",
     "    def get_response(self, prompt):\n",
@@ -141,8 +141,8 @@
     {
      "data": {
       "text/plain": [
-       "{'Overview': \"Dinosaurs are fascinating creatures that roamed the Earth millions of years ago. 🦖 They were a diverse group of reptiles that lived during the Mesozoic Era, which is often referred to as the 'Age of Dinosaurs'. 🌎🦕\\n\\nDinosaurs come in various shapes and sizes, ranging from small, bird-like dinosaurs to enormous, long-necked giants. They ruled the planet for over 160 million years before becoming extinct around 65 million years ago. 🌍💥\\n\\nThese incredible creatures captivate our imagination because they were unlike anything we see today. They were the dominant terrestrial vertebrates and played a crucial role in shaping the ecosystems of their time. 🌿🦖\\n\\nDinosaurs were incredibly diverse, with different species adapted to various habitats and lifestyles. Some were herbivores, feeding on plants and leaves, while others were carnivores, preying on other animals. 🌿🦖🍖\\n\\nStudying dinosaurs helps us understand the Earth's history, evolution, and the interconnectedness of different species. Paleontologists, scientists who study fossils, have made remarkable discoveries that provide insights into how dinosaurs lived, reproduced, and interacted with their environment. 🧪🔬\\n\\nThere are many famous dinosaur species that you might have heard of, such as Tyrannosaurus rex, Velociraptor, Triceratops, and Stegosaurus. Each of these dinosaurs had unique features and adaptations that allowed them to thrive in their respective environments. 🦖🌿🌾\\n\\nIf you want to learn more about dinosaurs, I recommend starting with books, documentaries, or visiting museums that have exhibits dedicated to these incredible creatures. It's a journey that will take you back in time and ignite your curiosity about the prehistoric world! 📚🦕🌍\",\n",
-       " 'Title': 'Dinosaurs 🦕'}"
+       "{'Overview': \"Well, buckle up, because we're about to embark on a journey 230 million years back in time, to the Mesozoic Era! This was the age of the dinosaurs, a period that lasted for over 160 million years. Dinosaurs were a diverse group of reptiles, and they came in all shapes and sizes, from the mighty T-Rex, king of the predators, to the gentle, long-necked Brachiosaurus. 🦖🦕\\n\\nDinosaurs are classified into two main groups based on their hip structure: the Saurischia, which includes creatures like the T-Rex and the long-tailed, long-necked sauropodomorphs, and the Ornithischia, herbivores with bird-like hips. 🍖🌿\\n\\nBut it wasn't just land that these magnificent creatures dominated; there were also marine reptiles like the Plesiosaur, and flying reptiles like the Pterosaur. 🌊🌤️\\n\\nSadly, all good things must come to an end. The reign of the dinosaurs ended with a bang - literally - when a massive asteroid hit the earth about 65 million years ago. This event, known as the K-T extinction, wiped out about 75% of all species on Earth. 🌍💥\\n\\nBut don't be too sad! Dinosaurs live on in their descendants - birds! So next time you see a pigeon in the park, remember, it's a tiny T-Rex in disguise! 🐦➡️🦖\",\n",
+       " 'Title': 'Dinosaurs: A Journey to the Mesozoic Era 🦖🦕'}"
       ]
      },
      "execution_count": 8,
@@ -205,21 +205,21 @@
     {
      "data": {
       "text/plain": [
-       "{'ui_element_1_type': 'Checkbox',\n",
-       " 'ui_element_1_label': 'Which type of dinosaur are you most interested in?',\n",
-       " 'ui_element_1_options': ['Tyrannosaurus rex',\n",
-       "  'Velociraptor',\n",
-       "  'Triceratops',\n",
-       "  'Stegosaurus'],\n",
+       "{'ui_element_1_type': 'SelectSlider',\n",
+       " 'ui_element_1_label': 'Choose your favorite dinosaur era 🦖',\n",
+       " 'ui_element_1_options': ['Triassic', 'Jurassic', 'Cretaceous'],\n",
        " 'ui_element_1_min_value': None,\n",
        " 'ui_element_1_max_value': None,\n",
-       " 'ui_element_2_type': 'TextInput',\n",
-       " 'ui_element_2_label': 'What is the most fascinating fact you know about dinosaurs? Share it with us!',\n",
-       " 'ui_element_2_options': None,\n",
+       " 'ui_element_2_type': 'Checkbox',\n",
+       " 'ui_element_2_label': 'Select the types of dinosaurs you want to learn about 🦕',\n",
+       " 'ui_element_2_options': ['Saurischia 🍖',\n",
+       "  'Ornithischia 🌿',\n",
+       "  'Marine Reptiles 🌊',\n",
+       "  'Flying Reptiles 🌤️'],\n",
        " 'ui_element_2_min_value': None,\n",
        " 'ui_element_2_max_value': None,\n",
-       " 'ui_element_3_type': None,\n",
-       " 'ui_element_3_label': None,\n",
+       " 'ui_element_3_type': 'TextInput',\n",
+       " 'ui_element_3_label': \"What's your question about dinosaurs? 🤔\",\n",
        " 'ui_element_3_options': None,\n",
        " 'ui_element_3_min_value': None,\n",
        " 'ui_element_3_max_value': None}"
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"ui_element_1_type\": \"Checkbox\", \"ui_element_1_label\": \"Which type of dinosaur are you most interested in?\", \"ui_element_1_options\": [\"Tyrannosaurus rex\", \"Velociraptor\", \"Triceratops\", \"Stegosaurus\"], \"ui_element_1_min_value\": null, \"ui_element_1_max_value\": null, \"ui_element_2_type\": \"TextInput\", \"ui_element_2_label\": \"What is the most fascinating fact you know about dinosaurs? Share it with us!\", \"ui_element_2_options\": null, \"ui_element_2_min_value\": null, \"ui_element_2_max_value\": null, \"ui_element_3_type\": null, \"ui_element_3_label\": null, \"ui_element_3_options\": null, \"ui_element_3_min_value\": null, \"ui_element_3_max_value\": null}'"
+       "'{\\n  \"ui_element_1_type\": \"SelectSlider\",\\n  \"ui_element_1_label\": \"Choose your favorite dinosaur era 🦖\",\\n  \"ui_element_1_options\": [\"Triassic\", \"Jurassic\", \"Cretaceous\"],\\n  \"ui_element_1_min_value\": null,\\n  \"ui_element_1_max_value\": null,\\n  \"ui_element_2_type\": \"Checkbox\",\\n  \"ui_element_2_label\": \"Select the types of dinosaurs you want to learn about 🦕\",\\n  \"ui_element_2_options\": [\"Saurischia 🍖\", \"Ornithischia 🌿\", \"Marine Reptiles 🌊\", \"Flying Reptiles 🌤️\"],\\n  \"ui_element_2_min_value\": null,\\n  \"ui_element_2_max_value\": null,\\n  \"ui_element_3_type\": \"TextInput\",\\n  \"ui_element_3_label\": \"What\\'s your question about dinosaurs? 🤔\",\\n  \"ui_element_3_options\": null,\\n  \"ui_element_3_min_value\": null,\\n  \"ui_element_3_max_value\": null\\n}'"
       ]
      },
      "execution_count": 13,
